--- a/src/style.css
+++ b/src/style.css
@@ -1,34 +1,61 @@
+*{
+  margin: 0px;
+}
 header {
-    background-color: #F5A661;
-    text-align: left;
+  background-color: #f5a661;
+  text-align: left;
 }
 
 #ghilogo {
-    height: 150px;
-    width: auto;
-    margin-left: 40px;
+  height: 150px;
+  width: auto;
+  margin-left: 40px;
 }
 
 #searchbox {
-    background-color: #FAE6CE;
-    border: none;
-    border-radius: 20px;
-    float: right;
-    height: 40px;
-    width: 250px;
-    display: none;
+  background-color: #fae6ce;
+  border: none;
+  border-radius: 20px;
+  float: right;
+  height: 40px;
+  width: 250px;
+  display: none;
 }
 
 body {
-    background-color: #C2F4F8;
+  background-color: #c2f4f8;
 }
 
 #sortBy {
-    background-color: #F5705A;
-    height: 50px;
+  background-color: #f5705a;
+  height: 50px;
 }
 
-#root{
-    height: 100px;
-    background-color: violet;
+#root {
+  background-color: violet;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around
+}
+
+/* .container {
+  background-color: aqua;
+  width: 200px;
+  height: 200px;
+} */
+
+.card {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  text-align: center;
+  background-color: peru;
+  border: 1px solid black;
+  margin: 20px;
+  width: 300px;
+}
+
+img{
+  width: 200px;
+  height: auto;
 }
