--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
+* {
+    margin: 0px;
+}
+
 header {
-    background-color: #F5A661;
+    background-color: #f5a661;
     text-align: left;
 }
 
@@ -10,7 +14,7 @@ header {
 }
 
 #searchbox {
-    background-color: #FAE6CE;
+    background-color: #fae6ce;
     border: none;
     border-radius: 20px;
     float: right;
@@ -20,10 +24,50 @@ header {
 }
 
 body {
-    background-color: #C2F4F8;
+    background-image: url(https://i.postimg.cc/BQztvsj0/Capture.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-color: #c2f4f8;
 }
 
 #sortBy {
-    background-color: #F5705A;
+    background-color: #f5705a;
     height: 50px;
+}
+
+#root {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around
+}
+
+/* .container {
+    background-color: aqua;
+    width: 200px;
+    height: 200px;
+  } */
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: #B5735B;
+    border-radius: 20px;
+    margin: 20px;
+    width: 300px;
+    font-family: 'Roboto Flex', sans-serif;
+    font-size: 15px;
+}
+.cardPoster{
+    height: 300px;
+    width: auto;
+}
+
+.infoButton {
+    border-radius: 30px;
+    border: none;
+    background-color: #DFF681;
+    font-size: 15px;
+    font-weight: 700;
 }
