--- a/src/style.css
+++ b/src/style.css
@@ -21,19 +21,34 @@ header {
     float: right;
     height: 40px;
     width: 250px;
-    display:none;
+    display: none;
 }
 
 body {
     background-image: url(https://i.postimg.cc/BQztvsj0/Capture.png);
     background-repeat: no-repeat;
-    background-position: 90;
+    background-position: 3px;
     background-color: #c2f4f8;
 }
 
 #sortBy {
     background-color: #f5705a;
     height: 50px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 60px;
+}
+
+#sortingMenu {
+    background-color: #DDBC94;
+    height: 25px;
+    width: 225px;
+    text-align: right;
+    border: none;
+    border-radius: 20px;
+    font-size: medium;
+    color: #ffffff;
 }
 
 #root {
@@ -42,12 +57,6 @@ body {
     flex-wrap: wrap;
     justify-content: space-around
 }
-
-/* .container {
-    background-color: aqua;
-    width: 200px;
-    height: 200px;
-  } */
 
 .card {
     display: flex;
@@ -59,7 +68,7 @@ body {
     margin: 20px;
     width: 300px;
     font-family: 'Roboto Flex', sans-serif;
-    padding: 20px 0;
+    padding-bottom: 20px;
 }
 
 h1 {
@@ -72,13 +81,13 @@ h1 {
     flex-direction: column;
 }
 
-.cardPoster{
+.cardPoster {
     height: 300px;
     width: auto;
 }
 
-.botonn {
-    border-radius: 30px;
+.moreInfoButton {
+    border-radius: 20px;
     border: none;
     background-color: #DFF681;
     font-size: 15px;
@@ -86,7 +95,3 @@ h1 {
     margin-top: 10px;
     display: none;
 }
-
-/* .infoCard {
-    display: none;
-} */
