--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
-*{
+* {
   margin: 0px;
 }
+
 header {
   background-color: #f5a661;
   text-align: left;
+  display: flex;
 }
 
 #ghilogo {
@@ -23,39 +25,73 @@ header {
 }
 
 body {
+  background-image: url(https://i.postimg.cc/BQztvsj0/Capture.png);
+  background-repeat: no-repeat;
+  background-position: 3px;
   background-color: #c2f4f8;
 }
 
 #sortBy {
   background-color: #f5705a;
   height: 50px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 60px;
+}
+
+#sortingMenu {
+  background-color: #DDBC94;
+  height: 25px;
+  width: 225px;
+  text-align: right;
+  border: none;
+  border-radius: 20px;
+  font-size: medium;
+  color: #ffffff;
 }
 
 #root {
-  background-color: violet;
+  padding-left: 380px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around
 }
 
-/* .container {
-  background-color: aqua;
-  width: 200px;
-  height: 200px;
-} */
-
 .card {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: peru;
-  border: 1px solid black;
+  background-color: #B5735B;
+  border-radius: 20px;
   margin: 20px;
   width: 300px;
+  font-family: 'Roboto Flex', sans-serif;
+  padding-bottom: 20px;
 }
 
-img{
-  width: 200px;
-  height: auto;
+h1 {
+  padding: 0 20px;
+  font-size: 20px;
+  height: 50px;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.cardPoster {
+  height: 300px;
+  width: auto;
+}
+
+.moreInfoButton {
+  border-radius: 20px;
+  border: none;
+  background-color: #DFF681;
+  font-size: 15px;
+  font-weight: 700;
+  margin-top: 10px;
+  display: none;
 }
