--- a/src/style.css
+++ b/src/style.css
@@ -94,3 +94,15 @@ h1 {
     margin-top: 10px;
     display: none;
 }
+#resetfilters {
+    background-color: #802620;
+    color: #FFFFFF;
+    border-radius: 20px;
+    border: none;
+}
+.filters {
+    background-color: #DDBC94;
+    width: 200px;
+    border-radius: 20px;
+    border: none;
+}
