--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,10 @@
     background-image: url(https://i.postimg.cc/BQztvsj0/Capture.png);
     background-repeat: no-repeat;
     background-color: #c2f4f8;
+    font-family: 'Roboto Flex', sans-serif;
+    background-position: -8px 350px;
+    background-size: 350px;
+    font-size: 17px;
   }
   
   #sortBy {
@@ -52,12 +56,15 @@
   
   #completeRoot {
     display: flex;
-  }
+    padding-top: 20px;
+  } 
 
   #filtersRoot {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    text-align: center;
+    padding-left: 40px;
   }
 
   #root {
@@ -65,6 +72,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-grow: 2;
   }
   
   .card {
@@ -72,7 +80,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: #B5735B;
+    background-color: #E9974F;
     border-radius: 20px;
     margin: 20px;
     width: 300px;
@@ -81,9 +89,8 @@
   }
   
   h1 {
-    padding: 0 20px;
+    margin-top: 20px;
     font-size: 20px;
-    height: 50px;
     width: auto;
     display: flex;
     justify-content: center;
@@ -93,6 +100,8 @@
   .cardPoster {
     height: 300px;
     width: auto;
+    margin-bottom: 15px;
+    margin-top: 10px;
   }
   
   .moreInfoButton {
@@ -110,15 +119,21 @@
     color: #ffffff;
     border: none;
     border-radius: 20px;
-    width: 250px;
-    height: 30px;
+    width: 200px;
+    height: 40px;
+    font-size: 17px;
+    margin: 20px;
   }
   
   .filters {
-    background-color: #DDBC94;
-    width: 250px;
-    height: 30px;
+    background-color: #ECDECC;
+    color: #000000;
+    width: 200px;
+    height: 40px;
     border-radius: 20px;
     border: none;
     text-align: center;
+    font-size: 17px;
+    margin: 5px;
+    position: -webkit-sticky;
   }
