--- a/src/style.css
+++ b/src/style.css
@@ -6,12 +6,27 @@ header {
   background-color: #f5a661;
   text-align: left;
   display: flex;
+  justify-content: space-between;
+  align-items: center
 }
 
 #ghilogo {
   height: 150px;
   width: auto;
   margin-left: 40px;
+}
+
+#funFacts{
+  background-color: #ECDECC;
+  color: #000000;
+  width: 200px;
+  height: 40px;
+  border-radius: 20px 0px 20px 0px;
+  border: none;
+  text-align: center;
+  font-size: 17px;
+  margin: 5px;
+  position: -webkit-sticky;
 }
 
 #searchbox {
@@ -136,4 +151,11 @@ h1 {
   font-size: 17px;
   margin: 5px;
   position: -webkit-sticky;
+}
+
+#moreInfo{
+  background-color: #7A0E07;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
